setup for javafx application and application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.main.web-application-type=none
+spring.datasource.url=jdbc:h2:./resources/db-rewards-manager
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
