--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.main.web-application-type=none
 spring.datasource.url=jdbc:h2:./resources/db-rewards-manager
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
+spring.datasource.username=username
+spring.datasource.password=password
