--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,22 +2,14 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.4'
-	id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'majestatyczne.bestie'
 version = '0.0.1-SNAPSHOT'
 
-apply plugin: 'org.openjfx.javafxplugin'
-
 java {
 	sourceCompatibility = '17'
 	targetCompatibility = '17'
-}
-
-javafx {
-	version = '17'
-	modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.swing', 'javafx.web']
 }
 
 configurations {
@@ -31,6 +23,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
