--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -41,6 +41,8 @@ dependencies {
   compileOnly 'org.projectlombok:lombok:1.18.30'
   annotationProcessor 'org.projectlombok:lombok:1.18.30'
   implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+  implementation 'org.apache.httpcomponents:httpclient:4.5.14'
+  implementation 'org.apache.httpcomponents:httpmime:4.5.14'
 
 }
 
