--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -1,9 +1,7 @@
 plugins {
   id 'java'
   id 'application'
-  id 'org.javamodularity.moduleplugin' version '1.8.12'
   id 'org.openjfx.javafxplugin' version '0.0.13'
-  id 'org.beryx.jlink' version '2.25.0'
 }
 
 group 'majestatyczne.bestie'
@@ -16,31 +14,32 @@ repositories {
 ext {
   junitVersion = '5.9.2'
 }
-
-sourceCompatibility = '17'
-targetCompatibility = '17'
-
+java {
+  sourceCompatibility = '17'
+  targetCompatibility = '17'
+}
 tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
 }
 
 application {
-  mainModule = 'majestatyczne.bestie.frontend'
-  mainClass = 'majestatyczne.bestie.frontend.HelloApplication'
+   mainClassName = 'majestatyczne.bestie.frontend.HomePageApplication'
 }
 
 javafx {
   version = '17.0.6'
-  modules = ['javafx.controls', 'javafx.fxml']
+  modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.swing', 'javafx.web']
 }
 
 dependencies {
-
+  implementation 'org.openjfx:javafx-controls:17.0.1'
+  implementation 'org.openjfx:javafx-fxml:17.0.1'
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
   compileOnly 'org.projectlombok:lombok:1.18.30'
   annotationProcessor 'org.projectlombok:lombok:1.18.30'
   implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+  implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
   implementation 'org.apache.httpcomponents:httpclient:4.5.14'
   implementation 'org.apache.httpcomponents:httpmime:4.5.14'
 
@@ -48,15 +47,3 @@ dependencies {
 
 test {
 useJUnitPlatform()}
-
-jlink {
-  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-  launcher {
-    name = 'app'
-  }
-}
-
-jlinkZip {
-  group = 'distribution'
-}
