--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.h2.console.enabled=true
 spring.datasource.username=username
 spring.datasource.password=password
 
+# logging
+logging.level.org.springframework=INFO
+logging.file.name=rewards-manager.log
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+
 # xlsx parser
 # positive index - count from the beginning
 # negative index - count from the end
