change logs dir

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=password
 
 # logging
 logging.level.org.springframework=INFO
-logging.file.name=rewards-manager.log
+logging.file.name=logs/rewards-manager.log
 logging.pattern.file=%d %p %c{1.} [%t] %m%n
 logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
