--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	implementation 'org.apache.poi:poi-ooxml:5.2.5'
 	implementation 'commons-fileupload:commons-fileupload:1.5'
 	implementation 'commons-io:commons-io:2.15.1'
+	implementation 'com.itextpdf:itextpdf:5.5.13'
 }
 
 tasks.named('test') {
